Bug 1079989 - Lower contrast and visually separate the revision block

--- a/ui/css/treeherder.css
+++ b/ui/css/treeherder.css
@@ -280,6 +280,10 @@ th-watched-repo {
     text-overflow: ellipsis;
 }
 
+.revision-comment {
+    color: #777;
+}
+
 .platform {
     font-size: 12px;
     padding-left: 0;
